// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox /> Spec Snapshots should render a checkbox with a label 1`] = `
.c0 {
  display: flex;
  flex-flow: row;
  align-items: center;
}

.c1 {
  position: relative;
  width: 16px;
  height: 16px;
}

.c3 {
  position: absolute;
  pointer-events: none;
  top: 0px;
}

.c2 {
  width: inherit;
  height: inherit;
  border-radius: 3px;
  box-sizing: border-box;
  appearance: none;
  margin: 0px;
  border: 1.5px solid #9b9c9e;
}

.c4 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Helvetica Neue",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 14px;
  font-weight: 400;
  line-height: 17px;
  color: #3e3e40;
  margin-left: 8px;
  cursor: default;
  user-select: none;
  flex: 1;
}

.c4:empty {
  margin-left: 0;
  display: none;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <input
        class="c2"
        type="checkbox"
      />
      <div
        class="c3"
      />
    </div>
    <div
      class="c4"
    >
      Label
    </div>
  </div>
</div>
`;

exports[`<Checkbox /> Spec Snapshots should render a checked and disabled checkbox 1`] = `
.c4 {
  width: 16px;
  height: 16px;
  display: flex;
  align-items: center;
  justify-content: center;
}

.c0 {
  display: flex;
  flex-flow: row;
  align-items: center;
}

.c1 {
  position: relative;
  width: 16px;
  height: 16px;
}

.c3 {
  position: absolute;
  pointer-events: none;
  top: 0px;
}

.c2 {
  width: inherit;
  height: inherit;
  border-radius: 3px;
  box-sizing: border-box;
  appearance: none;
  margin: 0px;
  background-color: #d4d6d9;
  border: 1.5px solid #d4d6d9;
}

.c5 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Helvetica Neue",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 14px;
  font-weight: 400;
  line-height: 17px;
  color: #3e3e40;
  margin-left: 8px;
  cursor: default;
  user-select: none;
  flex: 1;
}

.c5:empty {
  margin-left: 0;
  display: none;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <input
        class="c2"
        disabled=""
        type="checkbox"
      />
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <div
            color="#9b9c9e"
            height="16"
            name="CheckmarkBox"
            preserveaspectratio="none"
            viewbox="0 0 16 16"
            width="16"
          />
        </div>
      </div>
    </div>
    <div
      class="c5"
    />
  </div>
</div>
`;

exports[`<Checkbox /> Spec Snapshots should render a checked checkbox 1`] = `
.c4 {
  width: 16px;
  height: 16px;
  display: flex;
  align-items: center;
  justify-content: center;
}

.c0 {
  display: flex;
  flex-flow: row;
  align-items: center;
}

.c1 {
  position: relative;
  width: 16px;
  height: 16px;
}

.c3 {
  position: absolute;
  pointer-events: none;
  top: 0px;
}

.c2 {
  width: inherit;
  height: inherit;
  border-radius: 3px;
  box-sizing: border-box;
  appearance: none;
  margin: 0px;
  background: #367fee;
  border: none;
}

.c5 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Helvetica Neue",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 14px;
  font-weight: 400;
  line-height: 17px;
  color: #3e3e40;
  margin-left: 8px;
  cursor: default;
  user-select: none;
  flex: 1;
}

.c5:empty {
  margin-left: 0;
  display: none;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <input
        class="c2"
        type="checkbox"
      />
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <div
            color="#ffffff"
            height="16"
            name="CheckmarkBox"
            preserveaspectratio="none"
            viewbox="0 0 16 16"
            width="16"
          />
        </div>
      </div>
    </div>
    <div
      class="c5"
    />
  </div>
</div>
`;

exports[`<Checkbox /> Spec Snapshots should render an empty and disabled checkbox 1`] = `
.c0 {
  display: flex;
  flex-flow: row;
  align-items: center;
}

.c1 {
  position: relative;
  width: 16px;
  height: 16px;
}

.c3 {
  position: absolute;
  pointer-events: none;
  top: 0px;
}

.c2 {
  width: inherit;
  height: inherit;
  border-radius: 3px;
  box-sizing: border-box;
  appearance: none;
  margin: 0px;
  background-color: #f3f4f6;
  border: 1.5px solid #d4d6d9;
}

.c4 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Helvetica Neue",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 14px;
  font-weight: 400;
  line-height: 17px;
  color: #3e3e40;
  margin-left: 8px;
  cursor: default;
  user-select: none;
  flex: 1;
}

.c4:empty {
  margin-left: 0;
  display: none;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <input
        class="c2"
        disabled=""
        type="checkbox"
      />
      <div
        class="c3"
      />
    </div>
    <div
      class="c4"
    />
  </div>
</div>
`;

exports[`<Checkbox /> Spec Snapshots should render an empty checkbox 1`] = `
.c0 {
  display: flex;
  flex-flow: row;
  align-items: center;
}

.c1 {
  position: relative;
  width: 16px;
  height: 16px;
}

.c3 {
  position: absolute;
  pointer-events: none;
  top: 0px;
}

.c2 {
  width: inherit;
  height: inherit;
  border-radius: 3px;
  box-sizing: border-box;
  appearance: none;
  margin: 0px;
  border: 1.5px solid #9b9c9e;
}

.c4 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Helvetica Neue",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 14px;
  font-weight: 400;
  line-height: 17px;
  color: #3e3e40;
  margin-left: 8px;
  cursor: default;
  user-select: none;
  flex: 1;
}

.c4:empty {
  margin-left: 0;
  display: none;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <input
        class="c2"
        type="checkbox"
      />
      <div
        class="c3"
      />
    </div>
    <div
      class="c4"
    />
  </div>
</div>
`;

exports[`<Checkbox /> Spec Snapshots should render an indeterminate and disabled checkbox 1`] = `
.c4 {
  width: 16px;
  height: 16px;
  display: flex;
  align-items: center;
  justify-content: center;
}

.c0 {
  display: flex;
  flex-flow: row;
  align-items: center;
}

.c1 {
  position: relative;
  width: 16px;
  height: 16px;
}

.c3 {
  position: absolute;
  pointer-events: none;
  top: 0px;
}

.c2 {
  width: inherit;
  height: inherit;
  border-radius: 3px;
  box-sizing: border-box;
  appearance: none;
  margin: 0px;
  background-color: #d4d6d9;
  border: 1.5px solid #d4d6d9;
}

.c5 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Helvetica Neue",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 14px;
  font-weight: 400;
  line-height: 17px;
  color: #3e3e40;
  margin-left: 8px;
  cursor: default;
  user-select: none;
  flex: 1;
}

.c5:empty {
  margin-left: 0;
  display: none;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <input
        class="c2"
        disabled=""
        type="checkbox"
      />
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <div
            color="#9b9c9e"
            height="16"
            name="Minus"
            preserveaspectratio="none"
            viewbox="0 0 16 16"
            width="16"
          />
        </div>
      </div>
    </div>
    <div
      class="c5"
    />
  </div>
</div>
`;

exports[`<Checkbox /> Spec Snapshots should render an indeterminate checkbox 1`] = `
.c4 {
  width: 16px;
  height: 16px;
  display: flex;
  align-items: center;
  justify-content: center;
}

.c0 {
  display: flex;
  flex-flow: row;
  align-items: center;
}

.c1 {
  position: relative;
  width: 16px;
  height: 16px;
}

.c3 {
  position: absolute;
  pointer-events: none;
  top: 0px;
}

.c2 {
  width: inherit;
  height: inherit;
  border-radius: 3px;
  box-sizing: border-box;
  appearance: none;
  margin: 0px;
  background: #367fee;
  border: none;
}

.c5 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Helvetica Neue",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 14px;
  font-weight: 400;
  line-height: 17px;
  color: #3e3e40;
  margin-left: 8px;
  cursor: default;
  user-select: none;
  flex: 1;
}

.c5:empty {
  margin-left: 0;
  display: none;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <input
        class="c2"
        type="checkbox"
      />
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <div
            color="#ffffff"
            height="16"
            name="Minus"
            preserveaspectratio="none"
            viewbox="0 0 16 16"
            width="16"
          />
        </div>
      </div>
    </div>
    <div
      class="c5"
    />
  </div>
</div>
`;
